--- a/src/main/java/com/mycompany/software/administrativo/ventas/views/CreateBill.form
+++ b/src/main/java/com/mycompany/software/administrativo/ventas/views/CreateBill.form
@@ -113,7 +113,7 @@
           <SubComponents>
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Name"/>
+                <Property name="text" type="java.lang.String" value="Product Name"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="inputNameProduct">
