style background color dashboard

--- a/src/main/java/com/mycompany/software/administrativo/ventas/views/Dashboard.form
+++ b/src/main/java/com/mycompany/software/administrativo/ventas/views/Dashboard.form
@@ -215,6 +215,11 @@
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="content">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+          </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="Dashboard_content"/>
           </AuxValues>
